# HW_MLOps

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dashboard.py  docker-compose.yml  pyproject.toml  rest_api.py
app/: dvc_datasets.py  ml_core.py  models_registry.py  schemas.py  storage.py
app/model_specs/: catboost_classifier.py  logistic_regression.py
clearml_service/: docker-compose.yml
grpc_service/: grpc_server.py  ml_service.proto  ml_service_pb2.py  ml_service_pb2_grpc.py
models_storage/: f94076d4-8e2b-4ec2-8e46-b8f09ef7e360.pkl  models_db.json
tests/: conftest.py  test_dvc_ready.py  test_save_and_version_xy.py
