[project]
name = "hw-mlops"
version = "0.1.0"
description = ""
authors = [
    {name = "Polina Volodchenko",email = "volodchenko_02@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "catboost>=1.2",
    "joblib>=1.3.0",
    "pydantic>=2.4.0",
    "requests>=2.31.0",
    "dvc[s3] (>=3.64.1,<4.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.76.0"
ruff = "^0.14.5"
black = "^25.11.0"

